# turso-sqlite-perf-test

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  setup.sh  test_query-01.sql  test_query-01_tbl2.sql
src/: duckdb.rs  main.rs  sqlite.rs
