[package]
name = "sql-query-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
duckdb = {version = "1.3.1", features = [
  "bundled",
  "r2d2",
  "vtab",
  "vtab-arrow",
  "appender-arrow",
]}

r2d2 = { version = "0.8"}
limbo = "0.0.20"
bb8 = "0.9"
